# media-maintenance

./: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: configuration.md  dokploy.md  safety.md
src/: config.rs  main.rs  report.rs
src/album/: mod.rs
src/disk/: mod.rs
src/lidarr/: mod.rs
src/storage/: mod.rs
