[package]
name = "media-maintenance"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
autobins = false

[[bin]]
name = "media-maintenance"
path = "src/bin/media-maintenance.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
