[package]
name = "media-maintenance"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
autobins = false

[[bin]]
name = "media-maintenance"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
